<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_old_tenant"
            android:icon="@drawable/ic_old_tenant"
            android:title="@string/oldTenant"/>
        <item
            android:id="@+id/nav_backup_and_restore"
            android:icon="@drawable/ic_backup_and_restore"
            android:title="@string/backupAndRestore"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit"/>
    </group>


<!--    <item android:title="Account Settings">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_update"-->
<!--                android:icon="@drawable/ic_update"-->
<!--                android:title="Update Profile"/>-->
<!--            <item-->
<!--                android:id="@+id/nav_logout"-->
<!--                android:icon="@drawable/ic_signout"-->
<!--                android:title="Sign Out"/>-->
<!--        </menu>-->
<!--    </item>-->
</menu>