<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_margin="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:elevation="@dimen/_20sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            >

            <TextView
                android:id="@+id/listBuildingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ABC Building"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:transitionName="@string/buildingNameTransition"
                />

            <TextView
                android:id="@+id/currentTenantNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/tenantName"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listBuildingName" />

            <TextView
                android:id="@+id/currentTenantPhoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listBuildingName"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"
                android:text="@string/currentTenantPhone"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/currentTenantName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/currentTenantName"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:transitionName="@string/tenantNameTransition"
                app:layout_constraintEnd_toStartOf="@+id/currentTenantPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentTenantNameTitle" />

            <TextView
                android:id="@+id/currentTenantPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/currentTenantPhoneTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentTenantPhoneTitle"
                android:layout_marginTop="@dimen/_2sdp"
                tools:text="9999999999"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"
                android:transitionName="@string/mobileNumberTransition"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>