<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Features.View.ViewProperty">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        >


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/navigationHeadColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/overFlowMenuTheme"
            app:popupTheme="@style/popupStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/navigationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ABC Building"
                    android:textColor="#FFFFFF"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:transitionName="@string/buildingNameTransition"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/currentTenantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:transitionName="@string/tenantNameTransition"
            app:layout_constraintEnd_toStartOf="@+id/currentTenantPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:text="@string/emptyTenant" />

        <TextView
            android:id="@+id/idProof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentTenantName"
            android:text="@string/emptyIdProof" />

        <TextView
            android:id="@+id/currentTenantPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/emptyNumber"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:transitionName="@string/mobileNumberTransition"
            app:layout_constraintBottom_toBottomOf="@+id/currentTenantName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/currentTenantName" />

        <TextView
            android:id="@+id/propertyStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentTenantPhone"
            tools:text="active" />


        <TextView
            android:id="@+id/totalCreditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/totalCredit"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idProof" />

        <TextView
            android:id="@+id/totalCredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="@+id/totalCreditTitle"
            app:layout_constraintEnd_toStartOf="@+id/totalDebitTitle"
            app:layout_constraintStart_toEndOf="@+id/totalCreditTitle"
            app:layout_constraintTop_toTopOf="@+id/totalCreditTitle"
            android:text="0" />

        <TextView
            android:id="@+id/totalDebitTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/totalDebit"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/totalDebit"
            app:layout_constraintEnd_toStartOf="@id/totalDebit"
            app:layout_constraintTop_toTopOf="@+id/totalDebit" />

        <TextView
            android:id="@+id/totalDebit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/propertyStatus"
            android:text="0" />

        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressTitle"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalCreditTitle" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/addressTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addressTitle"
            app:layout_constraintTop_toTopOf="@+id/addressTitle"
            tools:text="Dhaka" />


        <TextView
            android:id="@+id/particulars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/particulars"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/particulars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/_20sdp"
            android:src="@drawable/ic_write"
            app:tint="@color/white"
            app:backgroundTint="@color/fabColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>