<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".Features.View.ViewOldProperty">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navigationHeadColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/overFlowMenuTheme"
        app:popupTheme="@style/popupStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/navigationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="ABC Building"
                android:textColor="#FFFFFF"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:transitionName="@string/buildingNameTransition"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/currentTenantName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        android:transitionName="@string/tenantNameTransition"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="@string/currentTenantName" />

    <TextView
        android:id="@+id/idProof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentTenantName"
        tools:text="Id proof" />

    <TextView
        android:id="@+id/currentTenantPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:text="9999999999999"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        android:transitionName="@string/mobileNumberTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTenantName" />



    <TextView
        android:id="@+id/totalCreditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/totalCredit"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idProof" />

    <TextView
        android:id="@+id/totalCredit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/totalCreditTitle"
        app:layout_constraintEnd_toStartOf="@+id/totalDebitTitle"
        app:layout_constraintStart_toEndOf="@+id/totalCreditTitle"
        app:layout_constraintTop_toTopOf="@+id/totalCreditTitle"
        tools:text="5000" />

    <TextView
        android:id="@+id/totalDebitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:text="@string/totalDebit"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/totalDebit"
        app:layout_constraintEnd_toStartOf="@id/totalDebit"
        app:layout_constraintTop_toTopOf="@+id/totalDebit" />

    <TextView
        android:id="@+id/totalDebit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/currentTenantPhone"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="500" />


    <TextView
        android:id="@+id/particulars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/particulars"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCredit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/particulars" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>